# data-preprocessing-sp

./: .gitignore  README.md  pyproject.toml
code/: 01_audio_duration.py  02_audio_duration.py  02_folders_audio_duration.py  cal_audio_duration.py  convert2khmer.py  docx_text.py  hash_remove_duplicate.py  main.ipynb  new_line.py  pdf_to_img.py  remove_symbol.py  rename_folder.py  text_similarity.py
evaluation/: main.ipynb
gemini/: app.py  helper.py  revert_json.py
gemini/meta/: original.json  output.json
gemini/output/: 1.json  2.json  3.json  4.json
helper/: 01_folder_audio_duration.py  02_folders_audio_duration.py  audio_similarity.py  clean_logs.py  clean_meta_audio.py  convert2khmer.py  count_speaker.py  hash_remove_duplicate.py  io.py  mp3_checker.py  remove_symbol.py  rename_folder.py  split_folder.py
logs/: 1.csv  2.csv  log.csv
output/: output.csv
pipe/: text_processor.py
sample/: 2.txt  3.txt
scrapping/ams/: app.py  helper.py  model.py
scrapping/wmc/: downloader.py  helper.py  main.py  model.py
statistics/: speaker_count.ipynb
youtube_dl/: main.py
